# Boost.Cpp.Library.Recipes

./: .gitignore  README.md
any/recipe-01/: README.md
any/recipe-01/boost/: recipe_6_06.h
any/recipe-01/cxx17/: CMakeLists.txt  recipe_6_06  recipe_6_06.cpp  recipe_6_06.h
filesystem/: README.md
filesystem/recipe-01/: README.md
filesystem/recipe-01/boost/: CMakeLists.txt  Makefile  build_by_cmake.sh  printdir.cpp  printdir2.cpp
filesystem/recipe-01/cxx17/: Makefile  printdir.cpp  printdir2.cpp
filesystem/recipe-01/posix/: CMakeLists.txt
intrusive_ptr/: README.md
intrusive_ptr/recipe-01/boost/: CMakeLists.txt  ProcessData.h  main.cpp
intrusive_ptr/recipe-01/boost_has_bug/: Makefile  ReferenceCounter.h  main.cpp
intrusive_ptr/recipe-01/cxx/: intrusive_ptr.hpp  main.cpp
intrusive_ptr/recipe-01/my_impl/: CMakeLists.txt
intrusive_ptr/recipe-02/boost/: ProcessData.h  build_by_cmake.sh
intrusive_ptr/recipe-02/cxx/: ReferenceCounter.h  intrusive_ref_counter.hpp  main.cpp
intrusive_ptr/recipe-02/my_impl/: Makefile  ProcessData.h  intrusive_ptr.hpp
message_queue/recipe-01/boost/: CMakeLists.txt  pmsg_create.cpp  pmsg_getattr.cpp  pmsg_receive.cpp  pmsg_send.cpp  pmsg_unlink.cpp  test.sh
message_queue/recipe-01/linux/: CMakeLists.txt  mq_notify_thread.c  test.sh
optional/: README.md
optional/recipe-01/: README.md
optional/recipe-01/boost/: CMakeLists.txt  recipe_6_07.cpp  recipe_6_07.h
optional/recipe-01/cxx17/: recipe_6_07.h
semaphores/: README.md
semaphores/recipe-01/: README.md
semaphores/recipe-01/boost/: CMakeLists.txt  Makefile  psem_create.cpp  psem_post.cpp  psem_trywait.cpp  psem_unlink.cpp  psem_wait.cpp  test.sh  thread_incr_psem.cpp
semaphores/recipe-01/linux/: test.sh
semaphores/recipe-01/my_impl/: CMakeLists.txt  thread_incr.cpp  thread_incr_psem.cpp
semaphores/recipe-01/my_impl/lib/: CMakeLists.txt  Semaphore.cpp
semaphores/recipe-01/posix/: CMakeLists.txt
serialization/recipe-01/boost/: CMakeLists.txt  Makefile  Person.hpp  main.cpp
shared_memory/: README.md
shared_memory/boost/: CMakeLists.txt  pshm_unlink.cpp  pshm_write.cpp
shared_memory/recipe-01/: README.md
shared_memory/recipe-01/boost/: CMakeLists.txt  Makefile  pshm_create.cpp  pshm_read.cpp  pshm_unlink.cpp  pshm_write.cpp
shared_memory/recipe-01/linux/: CMakeLists.txt  test.sh
shared_memory/recipe-01/posix/: CMakeLists.txt
shared_memory/recipe-02/: README.md
shared_memory/recipe-02/boost/: CMakeLists.txt  shmatomic.cpp  shmem.cpp
shared_memory/recipe-02/linux/: shmatomic.cpp
shared_memory/recipe-02/posix/: CMakeLists.txt  shmem.cpp
signal/: README.md
signal/recipe-01/: README.md
signal/recipe-01/asio/: CMakeLists.txt  remove_zombie.cpp  sigaction.cpp  signal.cpp
signal/recipe-01/boost/: CMakeLists.txt  Makefile  remove_zombie.cpp  sigaction.cpp  signal.cpp
signal/recipe-01/linux/: CMakeLists.txt
stacktrace/recipe-01/: README.md
stacktrace/recipe-01/boost/: CMakeLists.txt  Makefile  build_by_cmake.sh  program.cpp
stacktrace/recipe-01/libunwind/: CMakeLists.txt  Makefile  program.cpp  program_demangle.cpp
tcp/: README.md
tcp/recipe-01/: README.md
tcp/recipe-01/asio/: CMakeLists.txt  asio  hello_client.cpp  hello_server.cpp  test.sh
tcp/recipe-01/boost/: CMakeLists.txt  hello_client.cpp  hello_server.cpp
tcp/recipe-01/linux/: hello_server.c
tcp/recipe-02/: README.md
tcp/recipe-02/asio/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp
tcp/recipe-02/boost/: CMakeLists.txt  build_by_cmake.sh  tcp_client.cpp  tcp_server.cpp  test.sh
tcp/recipe-02/linux/: CMakeLists.txt
tcp/recipe-03/: README.md
tcp/recipe-03/asio/: CMakeLists.txt  echo_client.cpp  echo_client2.cpp  echo_server.cpp  test.sh
tcp/recipe-03/boost/: echo_client.cpp  echo_client2.cpp  echo_server.cpp
tcp/recipe-03/linux/: echo_server.c  test.sh
tcp/recipe-04/: README.md
tcp/recipe-04/asio/: echo_client2.cpp  echo_server.cpp  op_client.cpp  op_server.cpp
tcp/recipe-04/boost/: CMakeLists.txt  echo_client2.cpp  echo_server.cpp  op_client.cpp  op_server.cpp  test.sh
tcp/recipe-04/linux/: Makefile  echo_client2.c  echo_server.c  op_client.c  test.sh
tcp/recipe-05/asio/: CMakeLists.txt  Makefile  file_client.cpp  file_server.cpp  op_client.cpp  op_server.cpp
tcp/recipe-05/boost/: Makefile  file_client.cpp  file_server.cpp  op_client.cpp  op_server.cpp
tcp/recipe-05/linux/: Makefile  (+4 more)
tcp/recipe-06/: README.md
tcp/recipe-06/asio/: CMakeLists.txt  Makefile  file_client.cpp  file_server.cpp  gethostbyaddr.cpp  gethostbyname.cpp
tcp/recipe-07/: README.md
timer/: README.md  system_timer.md
timer/recipe-01/: boost.asio.system_timer使用教程.md  boost.asio.system_timer的线程安全性.md
timer/recipe-01/my_impl/: CMakeLists.txt  timer_async_wait1.cpp  timer_async_wait3.cpp  timer_async_wait_bind.cpp  timer_async_wait_lambda.cpp  timer_cancel.cpp  timer_once1.cpp  timer_period.cpp  timer_wait.cpp
timer/recipe-01/my_impl/lib/: Alarm.cpp  Alarm.hpp  AlarmService.cpp  AlarmService.hpp  CMakeLists.txt  Timer.cpp  Timer.hpp  TimerError.cpp  TimerError.hpp
udp/: README.md
udp/recipe-01/: README.md
udp/recipe-02/: README.md
udp/recipe-03/: README.md
udp/recipe-05/: README.md
variant/: README.md
variant/recipe-01/: README.md
(+160 files in other folders)
